// Copyright 2025 Gravitational, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.recordingdetails.v1;

import "teleport/recordingdetails/v1/recordingdetails.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/recordingdetails/v1;recordingdetailsv1";

// RecordingDetailsService provides methods to retrieve details about session recordings.
service RecordingDetailsService {
  // GetThumbnail retrieves the thumbnail for a session recording.
  rpc GetThumbnail(GetThumbnailRequest) returns (GetThumbnailResponse);
  // GetDetails retrieves the details for a session recording.
  rpc GetDetails(GetDetailsRequest) returns (GetDetailsResponse);
}

// GetThumbnailRequest is a request for retrieving a session's thumbnail.
message GetThumbnailRequest {
  // SessionId is the ID of the session whose thumbnail is being requested.
  string session_id = 1;
}

// GetThumbnailResponse is a response for retrieving a session's thumbnail.
message GetThumbnailResponse {
  // Thumbnail is the thumbnail of the session.
  teleport.recordingdetails.v1.SessionRecordingThumbnail thumbnail = 1;
}

// GetDetailsRequest is a request for retrieving a session's details.
message GetDetailsRequest {
  // SessionId is the ID of the session whose details are being requested.
  string session_id = 1;
}

// GetDetailsResponse is a response for retrieving a session's details.
message GetDetailsResponse {
  // Details contains the details of the session recording.
  teleport.recordingdetails.v1.SessionRecordingDetails details = 1;
}
